# hdr-conversion

./: .gitignore  404.html  README-zhCN.md  README.md  apple_heic_to_avif.py  dev_note.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  versions.json
.github/workflows/: docs.yml  publish.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api/: index.html
0.1.0/examples/: index.html
0.1.0/search/: search_index.json
0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.1/api/: index.html
0.1.1/examples/: index.html
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html  objects.inv  sitemap.xml
0.1.2/api/: index.html
0.1.2/examples/: index.html
0.1.2/search/: search_index.json
0.1.3/: 404.html  index.html  objects.inv  sitemap.xml
0.1.4/: 404.html  index.html  sitemap.xml
api/: index.html
api/core/: index.html
apple_heic/: color_conversion.py  get_images.py  headroom.py
deprecated/: gainmap.py  icc.py  main.py
dev/: 404.html  index.html  sitemap.xml
develop/: 404.html  index.html  sitemap.xml
docs/: examples.md  gen_ref_pages.py  index.md
examples/: apple_heic_to_gainmap.py  apple_heic_to_pq.py  create_test_patch.py  gainmap_to_pq.py  index.html  ios_screenshot_to_uhdr.py  metadata_manipulation.py  pq_to_gainmap.py
exp/: icc_inspect.py
img_input/: __init__.py  pqavif.py  ultrahdr.py
img_output/: __init__.py  pqavif.py
main/: 404.html  index.html  sitemap.xml
next/: dev_note.md  image_class.py
scripts/: apple_heic_to_avif.py  iso21496_example.py
search/: search_index.json
tests/: test_icc_colorconvert.py  test_import.py
utils/: __init__.py  eotf_inverse.py
v0.1.4/: 404.html  index.html  sitemap.xml
(+108 files in other folders)
