[project]
name = "hdr-conversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colour-science>=0.4.6",
    "imagecodecs>=2025.11.11",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pillow==11.3.0",
    "pillow-heif==0.22.0",
    "pyexiftool>=0.5.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
