[project]
name = "hdr-conversion"
version = "0.1.0a1"
description = "tools for converting HDR images between different formats"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colour-science>=0.4.7",
    "imagecodecs>=2025.11.11",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pillow-heif==0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "rich>=14.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hdrconv"]
